--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "react-toastify": "^8.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
