--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "lint": "eslint src --max-warnings=0"
   },
   "eslintConfig": {
     "extends": [
@@ -76,6 +77,10 @@
     "@types/axios": "^0.14.0",
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.23",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-plugin-react": "^7.28.0",
     "webpack": "^5.69.1"
   }
 }
