--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,9 @@
         "@typescript-eslint"
     ],
     "rules": {
-      "react-hooks/exhaustive-deps": "off"
+      "react-hooks/exhaustive-deps": "off",
+      "no-empty-function": "off",
+      "@typescript-eslint/no-empty-function": ["off"],
+      "no-prototype-builtins": "off"
     }
 }
