--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
       "react-hooks/exhaustive-deps": "off",
       "no-empty-function": "off",
       "@typescript-eslint/no-empty-function": ["off"],
-      "no-prototype-builtins": "off"
+      "no-prototype-builtins": "off",
+      "@typescript-eslint/no-explicit-any": "off",
+      "@typescript-eslint/no-unused-vars": "off"
     }
 }
