--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-plugin-react": "^7.28.0",
+    "react-test-renderer": "^17.0.2",
     "webpack": "^5.69.1"
   }
 }
